--- a/style.css
+++ b/style.css
@@ -42,4 +42,7 @@ body{
     backdrop-filter: blur(5.5px);
     -webkit-backdrop-filter: blur(5.5px);
     background: rgba(255, 255, 255, 0.75);
+    border: 1px solid rgba(255, 255, 255, 0.01);
+    border-radius: 16px;
+    box-shadow: 0px 4px 30px rgba(35, 35, 35, 0.1);
 }
